@@ -1,7 +1,7 @@
 Package: RVowpalWabbit
 Title: R interface to the Vowpal Wabbit
 Version: 0.0.6
-Date: 2014-01-06
+Date: 2014-01-07
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel <edd@debian.org>
 Description: R interface to Vowpal Wabbit fast out-of-core learning system
