@@ -1,4 +1,4 @@
-2014-01-06  Dirk Eddelbuettel  <edd@debian.org>
+2014-01-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.0.6
 
@@ -9,6 +9,11 @@
 	* config.guess: Added to keep configure happy
 	* config.sub: Idem
 	* install-sh: Idem
+
+	* src/bfgs.cc: Switch from isnan() to ISNAN() (defined by R) to
+	permit compilation under `-std=c++11` where isnan() is also defined.
+	* src/gd.cc: Idem
+	* src/parse_example.cc: Idem
 
 2012-05-20  Dirk Eddelbuettel  <edd@debian.org>
 
